# scm2a2ml

./: A2ML_FIX_SUMMARY.md  Cargo.toml  README.adoc
scripts/: add_missing_readme_manifest.sh  convert_all_scm.sh  convert_all_scm_progress.sh  fix_a2ml_structure.sh  fix_a2ml_structure_v2.sh  move_converted_to_6a2.sh  verify_a2ml_structure.sh
src/: lib.rs  main.rs
